# to_vector

./: .gitignore  LICENSE  README.md  example_env  pyproject.toml
.githooks/: pre-commit
docs/: minimal_spidr_extraction_code.py  status-and-recommendations-30-03-2026.md
scripts/: bump_pyproject_version.py
tests/: test_attention.py  test_codebook_artifacts.py  test_helpers.py  test_load.py  test_model_registry.py  test_public_api.py  test_spidr_codebook.py  test_to_embeddings.py  test_wav2vec2_codebook.py
to_vector/: __init__.py  _spidr_attention.py  _spidr_util.py  attention.py  audio.py  batch_helper.py  codebook.py  codebook_artifacts.py  hf_batch_helper.py  load.py  model_registry.py  spidr_batch_helper.py  spidr_codebook.py  to_embeddings.py  to_vector.py  utils.py  wav2vec2_codebook.py
